[package]
name = "cbor-tag-index"
version = "0.1.0"
authors = ["Ruediger Klaehn <rklaehn@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quickcheck_macros = "1.0.0"
anyhow = "1.0.38"
serde_cbor = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"
num-traits = "0.2.14"
vec-collections = "0.3.4"
fnv = "1.0.7"
hex = "0.4.2"
libipld = "0.11.0"
libipld-cbor = "0.11.1"
libipld-cbor-derive = "0.11.0"

[dev-dependencies]
serde_json = "1.0.61"
quickcheck = "1.0.3"
