[package]
name = "cbor-tag-index"
version = "0.1.0"
authors = ["Ruediger Klaehn <rklaehn@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
vec-collections = "0.3.4"
fnv = "1.0.7"
libipld = "0.11.0"
libipld-cbor = "0.11.1"

[dev-dependencies]
hex = "0.4.2"
quickcheck_macros = "1.0.0"
serde_json = "1.0.61"
quickcheck = "1.0.3"
rand = "0.8.3"
rand_chacha = "0.3.0"
criterion = "0.3.4"

[[bench]]
name = "misc"
harness = false

[profile.release]
debug = true
